<resources>
    <string name="app_name">Lab_3.3</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="smoker">Smoker?</string>
    <string name="calculate">Calculate</string>
    <string name="reset">Reset</string>
    <string name="premium">Premium</string>
    <string-array name="age">
        <item>Less than 6</item>
        <item>6 to 11</item>
        <item>11 to 16</item>
        <item>17 to 21</item>
        <item>22 to 30</item>
        <item>31 to 40</item>
        <item>41 to 50</item>
        <item>More than 50</item>
    </string-array>

</resources>
