<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.taruc.lab_33.MainActivity">

    <TextView
        android:id="@+id/textViewAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.208"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.032" />

    <Spinner
        android:id="@+id/spinnerAge"
        android:layout_width="199dp"
        android:layout_height="0dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:spinnerMode="dialog"
        app:layout_constraintLeft_toRightOf="@+id/textViewAge"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="53dp"
        android:layout_marginTop="33dp"
        android:text="@string/gender"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAge" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toRightOf="@+id/textViewGender"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="26dp"
        app:layout_constraintTop_toBottomOf="@+id/spinnerAge"
        android:id="@+id/radioGroupGender">

        <RadioButton
            android:id="@+id/radioButtonMale"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/radioButtonFemale"
            android:layout_width="97dp"
            android:layout_height="wrap_content"
            android:text="@string/female" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/checkBoxSmoker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="123dp"
        android:layout_marginTop="26dp"
        android:text="@string/smoker"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupGender" />

    <Button
        android:id="@+id/buttonCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="26dp"
        android:onClick="calculatePremium"
        android:text="@string/calculate"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTotal" />

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="26dp"
        android:onClick="ResetAll"
        android:text="@string/reset"
        app:layout_constraintLeft_toRightOf="@+id/buttonCalc"
        app:layout_constraintTop_toBottomOf="@+id/textViewTotal" />

    <TextView
        android:id="@+id/textViewPremium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Premium"
        android:layout_marginLeft="43dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="26dp"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxSmoker" />

    <TextView
        android:id="@+id/textViewTotal"
        android:layout_width="243dp"
        android:layout_height="80dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="26dp"
        app:layout_constraintLeft_toRightOf="@+id/textViewPremium"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxSmoker" />

</android.support.constraint.ConstraintLayout>
